--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -9,15 +9,43 @@ th.col {
   display: block;
   position: relative;
 }
-
+th.sorted[data-sorting-direction="1"], th.sorted[data-sorting-direction="-1"] {
+  padding-right: 15px;
+}
 th.sorted[data-sorting-direction="-1"]::after {
-  content: "▼"
+  content: "\25be";
 }
 
 th.sorted[data-sorting-direction="1"]::after {
-  content: "▲"
+  content: "\25b4";
 }
 
 th.sorted[data-sorting-direction="1"]::after, th.sorted[data-sorting-direction="-1"]::after {
+  margin-right: -15px;
   float: right;
+}
+
+table.table-fixed {
+  //table-layout: fixed;
+  //word-wrap: break-word;
+}
+.align-text-center {
+  text-align: center;
+}
+.text-one-line {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
+  min-width: 150px;
+}
+
+.dropdown_button_crud.show {
+  min-width: 200px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+.dp__action_row .dp__action_buttons {
+  width: 100%;
 }
