commit 6:  big fix crud, import users

--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -49,3 +49,32 @@ table.table-fixed {
 .dp__action_row .dp__action_buttons {
   width: 100%;
 }
+
+.select-count-row {
+  width: 130px !important;
+  line-height: 2rem !important;
+  background-position-y: 1rem !important;
+  height: 38px !important;
+  color: rgb(163 168 176) !important;
+}
+
+.form-floating {
+  margin-bottom: 1rem;
+}
+
+.form-floating .form-label {
+  top: -0.5rem !important;
+}
+.table-responsive {
+  margin-bottom: 1rem;
+}
+.custom-valid {
+  position: absolute;
+  width: 104%;
+  left: -2%;
+  height: 130%;
+  top: -15%;
+  background-color: transparent !important;
+  background-position: right calc(0.375em + 0.75rem) center !important;
+  pointer-events: none !important;
+}
