--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -6,7 +6,7 @@
   background: linear-gradient(-135deg, #50c859, #4158d0);
 }
 .wrap_login {
-  width: 70%;
+  width: 40%;
   border-radius: 25px;
   overflow: hidden;
   display: -webkit-box;
@@ -18,8 +18,7 @@
   justify-content: space-between;
   padding: 5%;
   margin: 0 5%;
-  background: rgba(80, 200, 89, 0.15);
-  background: linear-gradient(-135deg, rgba(80, 200, 89, 0.15), rgba(65, 88, 208, 0.15));
+  background: white;
   box-shadow: 0 0 25px;
 }
 
@@ -32,4 +31,18 @@
   width: 100%;
   display: block;
   padding-bottom: 10%;
+}
+.border-radius-5{
+  border-radius: 10px;
+}
+.button-login {
+  --cui-btn-bg: #7cc144;
+  --cui-btn-border-color: #7cc144;
+  --cui-btn-hover-bg: #458f41;
+  --cui-btn-hover-border-color: #458f41;
+  --cui-btn-active-bg: #7cc144;
+  --cui-btn-active-border-color: #7cc144;
+  --cui-btn-disabled-bg: #7cc144;
+  --cui-btn-disabled-border-color: #7cc144;
+  --cui-btn-shadow: rgba(157, 165, 177, 0.5);
 }
